manifests/demo-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: pirates
  labels:
    app: demo-service
spec:
  selector:
    app: demo-service
  ports:
  - port: 9080
    name: http
  type: LoadBalancer
